Fix registration form color contrast and font size (#6098)
- Fixed contrast issue by overriding SUI (for now)
- Fix font styles for the page heading

--- a/indico/web/client/styles/partials/_infogrids.scss
+++ b/indico/web/client/styles/partials/_infogrids.scss
@@ -24,7 +24,6 @@
 }
 
 .infoline {
-  color: $light-black;
   float: left;
   overflow: auto;
   width: 50%;
